new updated file

--- a/index.css
+++ b/index.css
@@ -6,15 +6,26 @@ body{
     justify-content: center;
     align-items: center;
     background-color: #0D7186;
-    height: 100vh;
+    width: 864px;
+    height: 650px;
 }
 .container{
     display: grid;
     grid-template-columns: 289px 312px auto;
-    width: 864px;
-    height: 637px;
+    /* width: 864px;
+    height: 637px; */
     border-radius: 40px;
     background-color: #FFFFFF;
+}
+h2{
+    font-size: 14px;
+    font-family: 'Fira Sans';   
+}
+p{
+    font-size: 11px;
+    font-family: 'Fira Sans';
+    color: #717886;
+    line-height: 15px; 
 }
 .column1{
    position: relative;
@@ -52,10 +63,6 @@ body{
 }
 .about{
     /* background-color: gray; */
-    font-size: 11px;
-    font-family: 'Fira Sans';
-    color: #717886;
-    line-height: 15px;
     width: 208px;
     height: 162px;
     margin: 48px 44px 427px 60px;
@@ -63,21 +70,13 @@ body{
 .goals{
     width: 208px;
     height: 129px;
-    font-size: 11px;
-    font-family: 'Fira Sans';
-    color: #717886;
     /* background-color: purple; */
     margin: 48px 41px 10px 14px ;
-    line-height: 15px;
 }
 .needs{
     /* background-color: saddlebrown; */
     width: 208px;
     height: 107px;
-    font-size: 11px;
-    font-family: 'Fira Sans';
-    color: #717886;
-    line-height: 15px;
     margin: 10px 41px 5px 14px;
 }
 .point{
@@ -89,6 +88,11 @@ body{
     font-family: 'Fira Sans';
     color: #717886;
     margin: 5px 41px 149px 14px ;    
+}
+.point h2{
+    font-size: 14px;
+    font-family: 'Fira Sans';
+    color: black;
 }
 .point ul{
     padding-left: 20px;
@@ -106,59 +110,50 @@ footer{
     width: 634px;
     height: 67px;
     margin: 25px 0 46px 54px;
-    font-size: 11px;
-    font-family: 'Fira Sans';
-    color: #717886;
+}
+
+.maindiv{
+   display: flex;
+   justify-content: space-between;
 }
 .slider{
-    /* background-color: skyblue; */
-    position: absolute;
+    /* background-color: yellowgreen; */
     width: 193px;
-    height: 48px;
     font-size: 11px;
     font-family: 'Fira Sans';
     color: #717886;
-    margin-top: -14px;
-    word-spacing: 100px;
+    display: grid;
+    margin-top: -8px;
+    
 }
-.image2{
-    width: 187px;
+.first{
+    display: grid;
+    grid-template-columns: 96.5px 96.5px;
+    grid-template-rows: auto;
+    color: #717886;  
+}
+.first2{
+    /* background-color: oldlace; */
+    display: grid;
+    grid-template-columns: 96.5px 96.5px;
+    grid-template-rows: auto;
+    color: #717886;
+}
+div img{
+    width: 195px;
     height: 8px;
 }
-.slider1{
-    /* background-color: khaki; */
-    position: absolute;
-    width: 190px;
-    height: 49px;
-    margin: 15px 223px 3px 221px;
-    margin-top: -14px;
-    word-spacing: 110px;
+.intro{
+    text-align: end;
 }
-.span1{
-    word-spacing: 2px;
-}
-.slider2{
-    /* background-color: red; */
-    position: absolute;
-    width: 186px;
-    height: 49px;
-    margin: 15px 4px 3px 444px;
-    margin-top: -14px;
-    word-spacing: 70px;
-}
-.span3{
-    word-spacing: 0px;
- }
-.span2{
-    word-spacing: 115px;
-}
+
 .image4{
     /* background-color: rgba(128, 255, 0, 0.384); */
     position: absolute;
     width: 179px;
     height: 165px;
-    margin: 9px 29px 64px 745px;
-    margin-top: -140px;
+    margin: 1px 29px 64px 680px;
+    margin-top: -110px;
 }
 .image4 img{
     position: absolute;
@@ -181,7 +176,7 @@ footer{
     height: 30px;
     margin: 35px 275px 211px 30px;
 }
-.info{
+.info p{
     position: absolute;
     width: 278px;
     height: 131px;
